// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LinkList /> renders LinkList correctly when its open 1`] = `
<div
  class="sc-bdVaJa links links__list bhMvGM"
>
  <div
    class="sc-bwzfXH bQTlgY"
  >
    <div
      class="links__list__item--selected sc-bxivhb links__list__item gLeqeE"
    >
      USA (English)
    </div>
    <div
      class="sc-bxivhb links__list__item gLeqeE"
    >
      Canada (English)
    </div>
    <div
      class="sc-bxivhb links__list__item gLeqeE"
    >
      Canada (Français)
    </div>
  </div>
</div>
`;

exports[`<LinkList /> renders LinkList correctly with list items as links 1`] = `
<div
  class="sc-bdVaJa links links__list bhMvGM"
>
  <div
    class="sc-bwzfXH bQTlgY"
  >
    <a
      class="sc-EHOje links__list__item hibrNn"
      href="/"
    >
      USA (English)
    </a>
    <a
      class="sc-EHOje links__list__item hibrNn"
      href="/"
    >
      Canada (English)
    </a>
    <a
      class="sc-EHOje links__list__item hibrNn"
      href="/"
    >
      Canada (Français)
    </a>
  </div>
</div>
`;
